2007-02-03  Mike Kestner  <mkestner@novell.com>

	* gtk/StatusIcon.custom : obsolete overload for backcompat on
	GetGeometry, and custom PresentMenu method to invoke new glue.
	* gtk/glue/statusicon.c : glue method to connect to gtk_menu_popup
	without having to go across the native/managed boundary multiple
	times using gtk_status_icon_position_menu wrapper.
	[Fixes #79500]

2007-02-02  Brad Taylor  <brad@getcoded.net>

	* gdk/Gdk.metadata: fix incorrect ref_count with Pixbuf's
	  RotateSimple method.

2007-01-09  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : add PersistUntilCalled method generation
	to the wrapper class.  Holds a GCHandle for the wrapper which is Freed
	when the delegate is invoked.
	* generator/MethodBody.cs : add "async" case for delegate scope.  Use
	this scope to identify a callback parameter that needs to persist 
	until the native side calls back.  Only valid for single-invoke
	callbacks.
	* gtk/Gtk.metadata : mark Print.RunPageSetupDialogAsync done_cb param
	with the new async scope.

2007-01-09  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoPixbuf.cs : use Marshal.Copy properly
	to avoid expose crashes. Revised from patch provided by
	Fabian Sturm.  [#78262]

2007-01-09  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoIconView.cs : use Gtk.Stock icons to avoid
	crashes when the previous gnome icons aren't installed. [#78212]

2007-01-09  Bart Deleye  <bart.deleye@gmail.com>

	* parser/gapi_pp.pl : regex fix for tinymail parse.

2007-01-09  Brad Taylor  <brad@getcoded.net>
	
	* gdk/Pixbuf.custom: Properly dispose of PixbufLoaders when we're done
	  with them.

2006-12-28  Brad Taylor  <brad@getcoded.net>

	* sample/GtkDemo/Makefile.am:
	* sample/GtkDemo/DemoPrinting.cs: Fix build on Win32.

2006-08-21  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : tag and bump version to 2.10.0. 

2006-08-10  Mikkel Kruse Johnsen <mikkel@linet.dk>
